display current date

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="project-title">To Do List</div>
 
             <!-- Date -->
-            <div class="date">Mon 18 Oct</div>
+            <div class="date js-date"></div>
 
             <!-- Progress Bar -->
             <div class="progress-section">
