progress bar working

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <!-- Progress Bar -->
             <div class="progress-section">
                 Progression
-                <div class="progress-bar"></div>
-                <div class="green-progress-bar"></div>
+                <div class="progress-bar js-progress-bar"></div>
+                <div class="green-progress-bar js-green-progress-bar"></div>
             </div>
 
             <!-- Cinnamonroll Image-->
